[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vphysics"
version = "0.0.1"
authors = [
    { name = "Florian Wiesner", email = "wiesnerflorian94@gmail.com" },
]
description = "A library for verifiable physics simulations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]